[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/enemy/tar monster/tarshot_mk2_2.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy/tar monster/tarpartic.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy/tar monster/tarshot_mk2_1.png" type="Texture" id=3]
[ext_resource path="res://tar.gd" type="Script" id=4]
[ext_resource path="res://assets/enemy/tar monster/tarshot_mk2_3.png" type="Texture" id=5]
[ext_resource path="res://assets/enemy/tar monster/tarshot_mk2_4.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=4]
radius = 12.0
height = 0.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "shot",
"speed": 20.0
} ]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="ParticlesMaterial" id=6]
next_pass = SubResource( 3 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Tar" type="Area2D"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 5 )
animation = "shot"
frame = 2
playing = true

[node name="KillTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 2, 2 )
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Tar_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
